--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Welcome!
+description: Most of this site will be about Machine Leanring. Feel free to bookmark this page 
